--- a/big_ds.slides.html
+++ b/big_ds.slides.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -13069,45 +13068,6 @@ ul.typeahead-list  > li > a.pull-right {
 .highlight .vm { color: #19177C } /* Name.Variable.Magic */
 .highlight .il { color: #666666 } /* Literal.Number.Integer.Long */
     </style>
-<style type="text/css">
-    
-/* Temporary definitions which will become obsolete with Notebook release 5.0 */
-.ansi-black-fg { color: #3E424D; }
-.ansi-black-bg { background-color: #3E424D; }
-.ansi-black-intense-fg { color: #282C36; }
-.ansi-black-intense-bg { background-color: #282C36; }
-.ansi-red-fg { color: #E75C58; }
-.ansi-red-bg { background-color: #E75C58; }
-.ansi-red-intense-fg { color: #B22B31; }
-.ansi-red-intense-bg { background-color: #B22B31; }
-.ansi-green-fg { color: #00A250; }
-.ansi-green-bg { background-color: #00A250; }
-.ansi-green-intense-fg { color: #007427; }
-.ansi-green-intense-bg { background-color: #007427; }
-.ansi-yellow-fg { color: #DDB62B; }
-.ansi-yellow-bg { background-color: #DDB62B; }
-.ansi-yellow-intense-fg { color: #B27D12; }
-.ansi-yellow-intense-bg { background-color: #B27D12; }
-.ansi-blue-fg { color: #208FFB; }
-.ansi-blue-bg { background-color: #208FFB; }
-.ansi-blue-intense-fg { color: #0065CA; }
-.ansi-blue-intense-bg { background-color: #0065CA; }
-.ansi-magenta-fg { color: #D160C4; }
-.ansi-magenta-bg { background-color: #D160C4; }
-.ansi-magenta-intense-fg { color: #A03196; }
-.ansi-magenta-intense-bg { background-color: #A03196; }
-.ansi-cyan-fg { color: #60C6C8; }
-.ansi-cyan-bg { background-color: #60C6C8; }
-.ansi-cyan-intense-fg { color: #258F8F; }
-.ansi-cyan-intense-bg { background-color: #258F8F; }
-.ansi-white-fg { color: #C5C1B4; }
-.ansi-white-bg { background-color: #C5C1B4; }
-.ansi-white-intense-fg { color: #A1A6B2; }
-.ansi-white-intense-bg { background-color: #A1A6B2; }
-
-.ansi-bold { font-weight: bold; }
-
-    </style>
 
 
 <style type="text/css">
@@ -13242,7 +13202,7 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="&quot;Big&quot;-Data-Science">"Big" Data Science<a class="anchor-link" href="#&quot;Big&quot;-Data-Science">&#182;</a></h1><h3 id="Guest-Lecture-in-Introduction-to-Data-Science-at-TAU-/-Prof.-Saharon-Rosset">Guest Lecture in Introduction to Data Science at TAU / Prof. Saharon Rosset<a class="anchor-link" href="#Guest-Lecture-in-Introduction-to-Data-Science-at-TAU-/-Prof.-Saharon-Rosset">&#182;</a></h3><h3 id="Giora-Simchoni">Giora Simchoni<a class="anchor-link" href="#Giora-Simchoni">&#182;</a></h3><h3 id="June-4th,-2019">June 4th, 2019<a class="anchor-link" href="#June-4th,-2019">&#182;</a></h3>
+<h1 id="&quot;Big&quot;-Data-Science">"Big" Data Science<a class="anchor-link" href="#&quot;Big&quot;-Data-Science">&#182;</a></h1><h3 id="Guest-Lecture-in-Introduction-to-Data-Science-at-TAU-/-Prof.-Saharon-Rosset">Guest Lecture in Introduction to Data Science at TAU / Prof. Saharon Rosset<a class="anchor-link" href="#Guest-Lecture-in-Introduction-to-Data-Science-at-TAU-/-Prof.-Saharon-Rosset">&#182;</a></h3><h3 id="Giora-Simchoni">Giora Simchoni<a class="anchor-link" href="#Giora-Simchoni">&#182;</a></h3><h3 id="June-22nd,-2020">June 22nd, 2020<a class="anchor-link" href="#June-22nd,-2020">&#182;</a></h3>
 </div>
 </div>
 </div></section></section><section><section>
@@ -13806,7 +13766,7 @@ DUMP X;
 <div class="prompt input_prompt">In&nbsp;[8]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">pyspark</span> <span class="k">import</span> <span class="n">SparkContext</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">pyspark</span> <span class="kn">import</span> <span class="n">SparkContext</span>
 
 <span class="n">sc</span> <span class="o">=</span> <span class="n">SparkContext</span><span class="p">()</span>
 <span class="n">rdd</span> <span class="o">=</span> <span class="n">sc</span><span class="o">.</span><span class="n">parallelize</span><span class="p">([</span><span class="mi">1</span><span class="p">,</span><span class="mi">2</span><span class="p">,</span><span class="mi">3</span><span class="p">,</span><span class="mi">4</span><span class="p">,</span><span class="mi">5</span><span class="p">])</span>
@@ -13829,7 +13789,7 @@ DUMP X;
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>ParallelCollectionRDD[0] at parallelize at PythonRDD.scala:195</pre>
+<pre>ParallelCollectionRDD[0] at readRDDFromFile at PythonRDD.scala:262</pre>
 </div>
 
 </div>
@@ -14005,7 +13965,7 @@ DUMP X;
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[[1], [2], [3], [4, 5]]</pre>
+<pre>[[], [1], [], [2], [3], [], [4], [5]]</pre>
 </div>
 
 </div>
@@ -14182,7 +14142,7 @@ DUMP X;
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>5015</pre>
+<pre>9015</pre>
 </div>
 
 </div>
@@ -14319,7 +14279,7 @@ DUMP X;
 <div class="prompt input_prompt">In&nbsp;[22]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">shakespeare</span> <span class="o">=</span> <span class="n">sc</span><span class="o">.</span><span class="n">textFile</span><span class="p">(</span><span class="s1">&#39;/home/jovyan/hadoop_example/shakespeare&#39;</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">shakespeare</span> <span class="o">=</span> <span class="n">sc</span><span class="o">.</span><span class="n">textFile</span><span class="p">(</span><span class="s1">&#39;hadoop_example/shakespeare/*&#39;</span><span class="p">)</span>
 </pre></div>
 
     </div>
@@ -14437,7 +14397,7 @@ DUMP X;
 <div class="prompt input_prompt">In&nbsp;[26]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">pyspark.sql</span> <span class="k">import</span> <span class="n">SparkSession</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">pyspark.sql</span> <span class="kn">import</span> <span class="n">SparkSession</span>
 
 <span class="n">spark</span> <span class="o">=</span> <span class="n">SparkSession</span><span class="p">(</span><span class="n">sc</span><span class="p">)</span>
 
@@ -14788,8 +14748,8 @@ only showing top 2 rows
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>351
-111
+<pre>362
+100
 </pre>
 </div>
 </div>
@@ -14803,7 +14763,7 @@ only showing top 2 rows
 <div class="prompt input_prompt">In&nbsp;[36]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">pyspark.ml.feature</span> <span class="k">import</span> <span class="n">RFormula</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">pyspark.ml.feature</span> <span class="kn">import</span> <span class="n">RFormula</span>
 
 <span class="n">formula</span> <span class="o">=</span> <span class="n">RFormula</span><span class="p">(</span><span class="n">formula</span><span class="o">=</span><span class="s1">&#39;chd ~ .&#39;</span><span class="p">,</span> <span class="n">featuresCol</span><span class="o">=</span><span class="s1">&#39;features&#39;</span><span class="p">,</span> <span class="n">labelCol</span><span class="o">=</span><span class="s1">&#39;label&#39;</span><span class="p">)</span>
 
@@ -14829,7 +14789,7 @@ only showing top 2 rows
 <pre>+---+-------+----+---------+-------+-----+-------+-------+---+---+--------------------+-----+
 |sbp|tobacco| ldl|adiposity|famhist|typea|obesity|alcohol|age|chd|            features|label|
 +---+-------+----+---------+-------+-----+-------+-------+---+---+--------------------+-----+
-|102|    0.4|3.41|    17.22|Present|   56|  23.59|   2.06| 39|  1|[102.0,0.4,3.41,1...|  1.0|
+|101|   0.48|7.26|     13.0| Absent|   50|  19.82|   5.19| 16|  0|[101.0,0.48,7.26,...|  0.0|
 +---+-------+----+---------+-------+-----+-------+-------+---+---+--------------------+-----+
 only showing top 1 row
 
@@ -14866,7 +14826,7 @@ only showing top 1 row
 <div class="prompt input_prompt">In&nbsp;[38]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">pyspark.ml.classification</span> <span class="k">import</span> <span class="n">LogisticRegression</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">pyspark.ml.classification</span> <span class="kn">import</span> <span class="n">LogisticRegression</span>
 
 <span class="n">lr</span> <span class="o">=</span> <span class="n">LogisticRegression</span><span class="p">(</span><span class="n">maxIter</span><span class="o">=</span><span class="mi">100</span><span class="p">,</span> <span class="n">regParam</span><span class="o">=</span><span class="mf">0.0</span><span class="p">)</span>
 
@@ -14890,8 +14850,8 @@ only showing top 1 row
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>Coefficients: [0.008408247604829246,0.0819338712417374,0.1844407014226751,0.031730852428542095,-0.9351098151988192,0.03907230665069162,-0.09409933142418063,0.0016123733510384239,0.028466557617748908]
-Intercept: -4.259414174733452
+<pre>Coefficients: [0.00129902161382201,0.07268020148984834,0.2174340350187219,0.0021612609181482826,-0.7996643787786133,0.03229365612393295,-0.05282631703787926,0.0017741654718499843,0.06347927905214099]
+Intercept: -5.0743059336551175
 </pre>
 </div>
 </div>
@@ -14926,8 +14886,8 @@ Intercept: -4.259414174733452
 <pre>+---+-------+----+---------+-------+-----+-------+-------+---+---+--------------------+-----+--------------------+--------------------+----------+
 |sbp|tobacco| ldl|adiposity|famhist|typea|obesity|alcohol|age|chd|            features|label|       rawPrediction|         probability|prediction|
 +---+-------+----+---------+-------+-----+-------+-------+---+---+--------------------+-----+--------------------+--------------------+----------+
-|101|   0.48|7.26|     13.0| Absent|   50|  19.82|   5.19| 16|  0|[101.0,0.48,7.26,...|  0.0|[2.00202242646562...|[0.88100925630563...|       0.0|
-|108|    0.0|1.43|    26.26| Absent|   42|  19.38|    0.0| 16|  0|[108.0,0.0,1.43,2...|  0.0|[2.91657410259036...|[0.94865969878719...|       0.0|
+|103|   0.03|4.21|    18.96| Absent|   48|  22.94|   2.62| 18|  0|[103.0,0.03,4.21,...|  0.0|[3.29608076815384...|[0.96429411302597...|       0.0|
+|106|   1.08|4.37|    26.08| Absent|   67|  24.07|  17.74| 28|  1|[106.0,1.08,4.37,...|  1.0|[1.95018796785011...|[0.87546713634656...|       0.0|
 +---+-------+----+---------+-------+-----+-------+-------+---+---+--------------------+-----+--------------------+--------------------+----------+
 only showing top 2 rows
 
@@ -14972,7 +14932,7 @@ only showing top 2 rows
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>Test accuracy: 0.78
+<pre>Test accuracy: 0.68
 </pre>
 </div>
 </div>
@@ -14987,7 +14947,7 @@ only showing top 2 rows
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># for AUC</span>
-<span class="kn">from</span> <span class="nn">pyspark.ml.evaluation</span> <span class="k">import</span> <span class="n">BinaryClassificationEvaluator</span>
+<span class="kn">from</span> <span class="nn">pyspark.ml.evaluation</span> <span class="kn">import</span> <span class="n">BinaryClassificationEvaluator</span>
 
 <span class="n">evaluator</span> <span class="o">=</span> <span class="n">BinaryClassificationEvaluator</span><span class="p">(</span><span class="n">rawPredictionCol</span><span class="o">=</span><span class="s1">&#39;rawPrediction&#39;</span><span class="p">)</span>
 <span class="n">auc</span> <span class="o">=</span> <span class="n">evaluator</span><span class="o">.</span><span class="n">evaluate</span><span class="p">(</span><span class="n">pred_df</span><span class="p">)</span>
@@ -15008,7 +14968,7 @@ only showing top 2 rows
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>Test AUC: 0.83
+<pre>Test AUC: 0.73
 </pre>
 </div>
 </div>
@@ -15026,11 +14986,11 @@ only showing top 2 rows
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[44]:</div>
+<div class="prompt input_prompt">In&nbsp;[42]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">pyspark.ml.classification</span> <span class="k">import</span> <span class="n">RandomForestClassifier</span>
-<span class="kn">from</span> <span class="nn">pyspark.ml.evaluation</span> <span class="k">import</span> <span class="n">MulticlassClassificationEvaluator</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">pyspark.ml.classification</span> <span class="kn">import</span> <span class="n">RandomForestClassifier</span>
+<span class="kn">from</span> <span class="nn">pyspark.ml.evaluation</span> <span class="kn">import</span> <span class="n">MulticlassClassificationEvaluator</span>
 
 <span class="n">rf</span> <span class="o">=</span> <span class="n">RandomForestClassifier</span><span class="p">(</span><span class="n">numTrees</span><span class="o">=</span><span class="mi">1000</span><span class="p">)</span>
 
@@ -15058,7 +15018,7 @@ only showing top 2 rows
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>Test accuracy: 0.75
+<pre>Test accuracy: 0.68
 </pre>
 </div>
 </div>
@@ -15069,7 +15029,7 @@ only showing top 2 rows
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[45]:</div>
+<div class="prompt input_prompt">In&nbsp;[43]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">evaluator</span> <span class="o">=</span> <span class="n">BinaryClassificationEvaluator</span><span class="p">(</span><span class="n">rawPredictionCol</span><span class="o">=</span><span class="s1">&#39;rawPrediction&#39;</span><span class="p">)</span>
@@ -15091,7 +15051,7 @@ only showing top 2 rows
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>Test AUC: 0.79
+<pre>Test AUC: 0.71
 </pre>
 </div>
 </div>
