--- a/big_ds.slides.html
+++ b/big_ds.slides.html
@@ -13202,7 +13202,7 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="&quot;Big&quot;-Data-Science">"Big" Data Science<a class="anchor-link" href="#&quot;Big&quot;-Data-Science">&#182;</a></h1><h3 id="Guest-Lecture-in-Introduction-to-Data-Science-at-TAU-/-Prof.-Saharon-Rosset">Guest Lecture in Introduction to Data Science at TAU / Prof. Saharon Rosset<a class="anchor-link" href="#Guest-Lecture-in-Introduction-to-Data-Science-at-TAU-/-Prof.-Saharon-Rosset">&#182;</a></h3><h3 id="Giora-Simchoni">Giora Simchoni<a class="anchor-link" href="#Giora-Simchoni">&#182;</a></h3><h3 id="June-22nd,-2020">June 22nd, 2020<a class="anchor-link" href="#June-22nd,-2020">&#182;</a></h3>
+<h3 id="&quot;Big&quot;-Data-Science">"Big" Data Science<a class="anchor-link" href="#&quot;Big&quot;-Data-Science">&#182;</a></h3><h3 id="Guest-Lecture-in-Introduction-to-Data-Science-at-TAU-/-Prof.-Saharon-Rosset">Guest Lecture in Introduction to Data Science at TAU / Prof. Saharon Rosset<a class="anchor-link" href="#Guest-Lecture-in-Introduction-to-Data-Science-at-TAU-/-Prof.-Saharon-Rosset">&#182;</a></h3><h3 id="Giora-Simchoni">Giora Simchoni<a class="anchor-link" href="#Giora-Simchoni">&#182;</a></h3><h3 id="June-23rd,-2020">June 23rd, 2020<a class="anchor-link" href="#June-23rd,-2020">&#182;</a></h3>
 </div>
 </div>
 </div></section></section><section><section>
@@ -13212,7 +13212,7 @@ a.anchor-link {
 <h1 id="What-is-Small?-What-is-Big?">What is Small? What is Big?<a class="anchor-link" href="#What-is-Small?-What-is-Big?">&#182;</a></h1><p>These definitions are constantly changing.</p>
 <p>(1) "Everything processed in Excel is small data." (<a href="https://www.theguardian.com/news/datablog/2013/apr/25/forget-big-data-small-data-revolution">Rufus Pollock, The Guardian</a>)</p>
 <p>(2) "[Big Data] is data so large it does not fit in main memory" (Leskovec et al., Mining of Massive Datasets)</p>
-<p>Or maybe we should define the size of our data according how easy it is to process and understand it?</p>
+<p>Or maybe we should define the size of our data according to how easy it is to process and understand it?</p>
 <p>(3) "[Small Data is] data that has small enough size for human comprehension." (<a href="jWork.ORG">jWork.ORG</a>)</p>
 <p>(4) "data sets that are too large or complex for traditional data-processing application software to adequately deal with" (<a href="https://en.wikipedia.org/wiki/Big_data">Wikipedia</a>)</p>
 <p>We'll talk about solutions to (2) and (4) today.</p>
@@ -13239,14 +13239,14 @@ a.anchor-link {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="Distributed-File-System-(DFS)">Distributed File System (DFS)<a class="anchor-link" href="#Distributed-File-System-(DFS)">&#182;</a></h1><ul>
-<li><p>Typically: <a href="https://hadoop.apache.org/docs/r1.2.1/hdfs_design.html">HDFS (Hadoop Distributed File System)</a>, another open source project by <a href="https://www.apache.org/">Apache</a></p>
+<li><p>Typically: <a href="https://hadoop.apache.org/">HDFS (Hadoop Distributed File System)</a>, another open source project by <a href="https://www.apache.org/">Apache</a></p>
 </li>
 <li><p>"Computers" (nodes) are stacked in racks of 8-64 size each.</p>
 </li>
 <li><p>Nodes on the same rack are connected, and racks are connected by a network or "switch"</p>
 </li>
 </ul>
-<p><img src = "images/computer_cluster.png"></p>
+<p><img src = "./images/computer_cluster.png"></p>
 
 </div>
 </div>
@@ -13769,7 +13769,7 @@ DUMP X;
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">pyspark</span> <span class="kn">import</span> <span class="n">SparkContext</span>
 
 <span class="n">sc</span> <span class="o">=</span> <span class="n">SparkContext</span><span class="p">()</span>
-<span class="n">rdd</span> <span class="o">=</span> <span class="n">sc</span><span class="o">.</span><span class="n">parallelize</span><span class="p">([</span><span class="mi">1</span><span class="p">,</span><span class="mi">2</span><span class="p">,</span><span class="mi">3</span><span class="p">,</span><span class="mi">4</span><span class="p">,</span><span class="mi">5</span><span class="p">])</span>
+<span class="n">rdd</span> <span class="o">=</span> <span class="n">sc</span><span class="o">.</span><span class="n">parallelize</span><span class="p">([</span><span class="mi">1</span><span class="p">,</span><span class="mi">2</span><span class="p">,</span><span class="mi">3</span><span class="p">,</span><span class="mi">4</span><span class="p">,</span><span class="mi">5</span><span class="p">],</span> <span class="mi">4</span><span class="p">)</span>
 <span class="n">rdd</span>
 </pre></div>
 
@@ -13965,7 +13965,7 @@ DUMP X;
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[[], [1], [], [2], [3], [], [4], [5]]</pre>
+<pre>[[1], [2], [3], [4, 5]]</pre>
 </div>
 
 </div>
@@ -14142,7 +14142,7 @@ DUMP X;
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>9015</pre>
+<pre>5015</pre>
 </div>
 
 </div>
@@ -14748,8 +14748,8 @@ only showing top 2 rows
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>362
-100
+<pre>374
+88
 </pre>
 </div>
 </div>
@@ -14850,8 +14850,8 @@ only showing top 1 row
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>Coefficients: [0.00129902161382201,0.07268020148984834,0.2174340350187219,0.0021612609181482826,-0.7996643787786133,0.03229365612393295,-0.05282631703787926,0.0017741654718499843,0.06347927905214099]
-Intercept: -5.0743059336551175
+<pre>Coefficients: [0.009260570445916523,0.0788486946420192,0.1662444813477797,0.022566142657327527,-0.7041656467563279,0.040871728462501714,-0.06983394060234696,-0.006510927409719812,0.04231159447367855]
+Intercept: -5.422972995540954
 </pre>
 </div>
 </div>
@@ -14886,8 +14886,8 @@ Intercept: -5.0743059336551175
 <pre>+---+-------+----+---------+-------+-----+-------+-------+---+---+--------------------+-----+--------------------+--------------------+----------+
 |sbp|tobacco| ldl|adiposity|famhist|typea|obesity|alcohol|age|chd|            features|label|       rawPrediction|         probability|prediction|
 +---+-------+----+---------+-------+-----+-------+-------+---+---+--------------------+-----+--------------------+--------------------+----------+
-|103|   0.03|4.21|    18.96| Absent|   48|  22.94|   2.62| 18|  0|[103.0,0.03,4.21,...|  0.0|[3.29608076815384...|[0.96429411302597...|       0.0|
-|106|   1.08|4.37|    26.08| Absent|   67|  24.07|  17.74| 28|  1|[106.0,1.08,4.37,...|  1.0|[1.95018796785011...|[0.87546713634656...|       0.0|
+|108|    3.0|1.59|    15.23| Absent|   40|  20.09|  26.64| 55|  0|[108.0,3.0,1.59,1...|  0.0|[1.89684801054186...|[0.86953436653892...|       0.0|
+|109|    1.2|6.14|    29.26| Absent|   47|  24.72|  10.46| 40|  0|[109.0,1.2,6.14,2...|  0.0|[1.52305587620415...|[0.82098803319683...|       0.0|
 +---+-------+----+---------+-------+-----+-------+-------+---+---+--------------------+-----+--------------------+--------------------+----------+
 only showing top 2 rows
 
@@ -14932,7 +14932,7 @@ only showing top 2 rows
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>Test accuracy: 0.68
+<pre>Test accuracy: 0.81
 </pre>
 </div>
 </div>
@@ -14968,7 +14968,7 @@ only showing top 2 rows
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>Test AUC: 0.73
+<pre>Test AUC: 0.81
 </pre>
 </div>
 </div>
@@ -15018,7 +15018,7 @@ only showing top 2 rows
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>Test accuracy: 0.68
+<pre>Test accuracy: 0.72
 </pre>
 </div>
 </div>
@@ -15051,7 +15051,7 @@ only showing top 2 rows
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>Test AUC: 0.71
+<pre>Test AUC: 0.72
 </pre>
 </div>
 </div>
